# nloptwr

./: .codespellignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.in  README.md  readme.md  vcpkg.json
.github/workflows/: build.yml  cmake.yml  doxygen-gh-pages.yml  linux.yml  mac.yml  pre-commit.yml  windows.yml
cmake/: FindNLOPT.cmake  FindNLOPTCXX.cmake  FindNLOPTWR.cmake  FindOpenMP.cmake
example/: CMakeLists.txt  nloptwr_example1.cpp
examples/example01/: CMakeLists.txt  nloptwr_example1.cpp
examples/example01/cmake/: exampleConfig.cmake.in
lib/: CMakeLists.txt
lib/cmake/: nloptwrConfig.cmake.in
lib/include/nloptwr/: nloptwr.h  nloptwralgorithm.h  nloptwrfcargs.h  nloptwrparamfactory.h  nloptwrsearchalgoparam.h  nloptwrsearchalgoparamd.h  nloptwrsstrat.h  omphelper.h  optfktnbase.h  optfktnclass.h  paramrequirement.h
lib/src/: nloptwr.cpp  nloptwralgorithm.cpp  nloptwrfcargs.cpp  nloptwrparamfactory.cpp  nloptwrsearchalgoparam.cpp  nloptwrsearchalgoparamd.cpp  optfktnbase.cpp  optfktnclass.cpp  paramrequirement.cpp
lib/tests/: CMakeLists.txt  nloptwr_test6_grafik.sh  readme.txt
lib/tests/include/nloptwrtest/: chainwithweights.h  griewank.h  groundcos.h  groundlin.h  oproblem.h  oproblemtest.h  rastrigin.h  xh.h
lib/tests/src/: chainwithweights.cpp  griewank.cpp  groundcos.cpp  nloptwr_test1.cpp  nloptwr_test2.cpp  nloptwr_test3.cpp  nloptwr_test4.cpp  nloptwr_test5.cpp  nloptwr_test6.cpp  oproblem.cpp  rastrigin.cpp  selalgtest.cpp  xh.cpp
misc/: FindNLOPT.cmake  FindNLOPTCXX.cmake  FindNLOPTWR.cmake  FindOpenMP.cmake  nloptwr_test6.plt  test6_grafik.sh
nloptwr/: CMakeLists.txt  nloptwr-config.cmake
nloptwr/include/nloptwr/: gauss.h  lregx.h  nloptwr.h  nloptwra.h  nloptwralgorithm.h  nloptwrparamfactory.h  nloptwrsearchalgoparam.h  nloptwrsearchalgoparam2.h  nloptwrsearchalgoparam3.h  nloptwrsearchalgoparamd.h  nloptwrsstrat.h  omphelper.h  optfktnbase.h  optfktnclass.h
nloptwr/src/: gauss.cpp  lregx.cpp  nloptwr.cpp  nloptwralgorithm.cpp  nloptwrparamfactory.cpp  nloptwrsearchalgoparam.cpp  nloptwrsearchalgoparam2.cpp  nloptwrsearchalgoparam3.cpp  nloptwrsearchalgoparamd.cpp  nloptwrsstrat.cpp  omphelper.cpp  optfktnbase.cpp  optfktnclass.cpp
nloptwrtest/: CMakeLists.txt  nloptwr_test6.plt  nloptwr_test6_grafik.sh
nloptwrtest/include/nloptwrtest/: chainwithweights.h  griewank.h  groundcos.h  groundif.h  groundlin.h  odisplay.h  oproblem.h  oproblemtest.h  rastrigin.h  selalgtest.h  vcompare.h
nloptwrtest/src/: chainwithweights.cpp  griewank.cpp  groundcos.cpp  groundif.cpp  nloptwr_test1.cpp  nloptwr_test2.cpp  nloptwr_test3.cpp  nloptwr_test4.cpp  nloptwr_test5.cpp  nloptwr_test6.cpp  odisplay.cpp  oproblem.cpp  oproblemtest.cpp  rastrigin.cpp  selalgtest.cpp  vcompare.cpp
tests/: CMakeLists.txt  nloptwr_test6.plt
tests/cmake/: nloptwrtestConfig.cmake.in
tests/include/nloptwrtest/: odisplay.h  vcompare.h
tests/src/: griewank.cpp  groundlin.cpp  nloptwr_test6.cpp  selalgtest.cpp
